# demo_ray_tracer

./: .gitignore  CMakeLists.txt  drt.h  main.cpp  math.h  primitive.h  ray.h  scene.h  sphere.h
core/: color.h  core.h  math.h  math_lib.h  random.h  utilities.h
render/: aarect.h  box.h  camera.h  light.h  material.h  plane.h  primitive.h  ray.h  scene.h  sphere.h  texture.h
render/bvh/: aabb.h  bvh_node.h
